--- a/frontend/src/app/horta-page/horta-page.component.html
+++ b/frontend/src/app/horta-page/horta-page.component.html
@@ -1,6 +1,7 @@
 <div class="flex flex-col gap-3 max-w-full">
     <div class="flex flex-col items-center justify-center gap-3 max-w-full py-4 bg-green-600 text-white shadow-md rounded-lg">
-        <p class="text-2xl font-semibold">Horta Urbana</p>
+        <p class="text-2x1 font-semibold">Irrigador automático</p>
+        <p class="text-2xl italic">Dashboard de acompanhamento</p>
         <p class="text-sm italic">Pedro Magri | 22200513</p>
     </div>    
     <div class="content">
