--- a/frontend/src/app/horta-page/horta-page.component.html
+++ b/frontend/src/app/horta-page/horta-page.component.html
@@ -1,18 +1,25 @@
 <div class="flex flex-col gap-3 max-w-full">
-    <div class="flex flex-col items-center justify-center gap-3 max-w-full py-4 bg-green-600 text-white shadow-md rounded-lg">
+    <div class="flex flex-col items-center justify-center gap-3 max-w-full py-4 bg-green-600 text-white shadow-md">
         <p class="text-2x1 font-semibold">Irrigador automático</p>
         <p class="text-2xl italic">Dashboard de acompanhamento</p>
-        <p class="text-sm italic">Pedro Magri | 22200513</p>
-    </div>    
+    </div>
+    <div class="flex flex-col items-center justify-center gap-3 max-w-full py-4 text-black shadow-md">
+    <p class="text-xl">
+      Umidade do Solo: 
+      <span [ngStyle]="{'color': lastSensorData?.soilMoisturePercentage < 60 ? 'red' : 'blue'}">
+        {{ lastSensorData?.soilMoisturePercentage }}%
+      </span>
+    </p>
+    <p class="text-md">
+      {{ lastSensorData?.createdAt }}
+    </p>
+  </div>
     <div class="content">
-      <div class="chart-container">
-        <p-chart type="bar" [data]="data" [options]="verticalOptions"></p-chart>
-      </div>
       <div class="chart-container">
         <p-chart type="bar" [data]="data" [options]="horizontalOptions"></p-chart>
       </div>
       <div class="table-container">
-        <p-table [value]="sensorData" [tableStyle]="{ 'min-width': '50rem' }">
+        <p-table [value]="sensorData" [tableStyle]="{ 'min-width': '80rem' }">
           <ng-template pTemplate="header">
             <tr>
               <th>ID</th>
@@ -26,7 +33,7 @@
               <td>{{ data.id }}</td>
               <td>{{ data.soilMoisturePercentage }}</td>
               <td>{{ data.moistured }}</td>
-              <td>{{ data.timestamp }}</td>
+              <td>{{ data.createdAt }}</td>
             </tr>
           </ng-template>
         </p-table>
